--- a/UserManagementApp/Base.lproj/Main.storyboard
+++ b/UserManagementApp/Base.lproj/Main.storyboard
@@ -136,19 +136,72 @@
             <point key="canvasLocation" x="1044.8" y="116.74876847290641"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="RqP-K2-rGf">
+        <scene sceneID="6Hv-Fk-7Gq">
             <objects>
-                <viewController id="r98-6b-vWf" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="mq2-nr-F1e">
+                <viewController id="njC-05-GCd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="74K-7a-yle">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="146-eD-hXp">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <items>
+                                    <navigationItem title="キャンプ生データ" id="NBK-90-cTa"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crD-mg-lqM">
+                                <rect key="frame" x="0.0" y="64" width="320" height="21"/>
+                                <color key="backgroundColor" red="0.81346827399999999" green="0.87305146519999999" blue="0.96568318399999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zld-Le-15I">
+                                <rect key="frame" x="0.0" y="85" width="320" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="l6Y-0B-fgj">
+                                <rect key="frame" x="0.0" y="126.5" width="320" height="441.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="趣味" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0h-CX-GXx">
+                                <rect key="frame" x="0.0" y="105.5" width="320" height="21"/>
+                                <color key="backgroundColor" red="0.81346827399999999" green="0.87305146519999999" blue="0.96568318399999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="hlW-nJ-O8E"/>
+                        <constraints>
+                            <constraint firstItem="ie4-oD-fgw" firstAttribute="trailing" secondItem="l6Y-0B-fgj" secondAttribute="trailing" id="BSc-aO-x5c"/>
+                            <constraint firstItem="146-eD-hXp" firstAttribute="trailing" secondItem="crD-mg-lqM" secondAttribute="trailing" id="Jy8-Vr-Kv2"/>
+                            <constraint firstItem="Q0h-CX-GXx" firstAttribute="top" secondItem="Zld-Le-15I" secondAttribute="bottom" id="RKE-gn-LcA"/>
+                            <constraint firstItem="ie4-oD-fgw" firstAttribute="bottom" secondItem="l6Y-0B-fgj" secondAttribute="bottom" id="UoE-Wg-Ga6"/>
+                            <constraint firstItem="ie4-oD-fgw" firstAttribute="trailing" secondItem="crD-mg-lqM" secondAttribute="trailing" id="XAZ-ah-821"/>
+                            <constraint firstAttribute="trailing" secondItem="Q0h-CX-GXx" secondAttribute="trailing" id="XXD-ag-cZN"/>
+                            <constraint firstItem="146-eD-hXp" firstAttribute="top" secondItem="ie4-oD-fgw" secondAttribute="top" id="aO1-0S-tEL"/>
+                            <constraint firstItem="l6Y-0B-fgj" firstAttribute="top" secondItem="Q0h-CX-GXx" secondAttribute="bottom" id="dgx-UE-N9N"/>
+                            <constraint firstItem="crD-mg-lqM" firstAttribute="top" secondItem="146-eD-hXp" secondAttribute="bottom" id="fqj-ue-RCv"/>
+                            <constraint firstItem="Zld-Le-15I" firstAttribute="top" secondItem="crD-mg-lqM" secondAttribute="bottom" id="hPN-qq-Zcs"/>
+                            <constraint firstItem="crD-mg-lqM" firstAttribute="leading" secondItem="ie4-oD-fgw" secondAttribute="leading" id="jtV-e2-vZl"/>
+                            <constraint firstItem="l6Y-0B-fgj" firstAttribute="leading" secondItem="Q0h-CX-GXx" secondAttribute="leading" id="nFY-69-ie9"/>
+                            <constraint firstItem="ie4-oD-fgw" firstAttribute="trailing" secondItem="Zld-Le-15I" secondAttribute="trailing" id="pPd-3L-8yb"/>
+                            <constraint firstItem="Q0h-CX-GXx" firstAttribute="leading" secondItem="ie4-oD-fgw" secondAttribute="leading" id="pnk-wt-VkL"/>
+                            <constraint firstItem="146-eD-hXp" firstAttribute="leading" secondItem="crD-mg-lqM" secondAttribute="leading" id="rKA-Pb-ByP"/>
+                            <constraint firstItem="Zld-Le-15I" firstAttribute="leading" secondItem="ie4-oD-fgw" secondAttribute="leading" id="zcP-sS-4BG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ie4-oD-fgw"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bt3-hS-Iab" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UUF-Ck-i1X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1949" y="113"/>
+            <point key="canvasLocation" x="2021.25" y="103.52112676056338"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kWc-VP-nWF">
